# nice

./: .gitignore  CMakeLists.txt  Makefile  Makefile.nmake  README.md  TODO.md  calc.cpp  demo.cpp  nice.hpp  scribble.cpp
doc/: TODO.md
doc/lesson1/: CMakeLists.txt  README.md  lesson1.cpp
doc/lesson2/: CMakeLists.txt  README.md  lesson2.cpp  nice.hpp
doc/lesson3/: CMakeLists.txt  README.md  lesson3.cpp  nice.hpp
doc/lesson4/: CMakeLists.txt  README.md  nice.hpp
doc/lesson5/: CMakeLists.txt  README.md  lesson5.cpp  nice.hpp
doc/lesson6/: CMakeLists.txt  README.md  lesson6.cpp  nice.hpp
include/: nice.hpp
samples/: 2_raster.cpp  2_scrible.todo  3_calculator.cpp  Makefile  tut_raster.cpp
scripts/: nice.template  samples.sln  sm.cpp
scripts/minimal/: minimal.vcxproj  minimal.vcxproj.filters
scripts/windev/minimal/: minimal.vcxproj  minimal.vcxproj.filters  nice.hpp
scripts/windev/minimal/Debug/: minimal.exe.recipe
src/: app.cpp  app.hpp  app_wnd.cpp  app_wnd.hpp  artist.hpp  exception.hpp  geometry.hpp  includes.hpp  literals.hpp  mouse_info.hpp  property.hpp  raster.cpp  raster.hpp  resource.hpp  signal.hpp  wnd.cpp  wnd.hpp
src/native/gtk/: includes.hpp  types.hpp
src/native/sdl/: includes.hpp  native_app.cpp  native_app_wnd.cpp  native_artist.cpp  native_start.cpp  native_types.hpp  native_wnd.cpp  native_wnd.hpp  types.hpp
src/native/win/: app.cpp  artist.cpp  includes.hpp  native_app.cpp  native_app_wnd.cpp  native_app_wnd.hpp  native_artist.cpp  native_start.cpp  native_wnd.cpp  native_wnd.hpp  types.hpp
src/native/windows/: includes.hpp  types.hpp
src/native/x11/: native_app_wnd.cpp  native_artist.cpp  native_includes.hpp  native_raster.cpp  native_raster.hpp  native_start.cpp  native_wnd.cpp  native_wnd.hpp  types.hpp
src/windows/: includes.hpp  types.hpp
src/x11/: includes.hpp  types.hpp
tmp/: sm
