cmake_minimum_required (VERSION 3.8)
project(nice)
if (WIN32)
    add_definitions(-DWIN32_LEAN_AND_MEAN -D__cpp_lib_concepts)
    add_executable (nice WIN32 demo.cpp)
    add_executable (calc WIN32 calc.cpp)
    add_executable (scribble WIN32 scribble.cpp)
    set_property(TARGET nice PROPERTY CXX_STANDARD 20)
    set_property(TARGET calc PROPERTY CXX_STANDARD 20)
    set_property(TARGET scribble PROPERTY CXX_STANDARD 20)
elseif(UNIX)
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
    include_directories(${GTK3_INCLUDE_DIRS})
    link_directories(${GTK3_LIBRARY_DIRS})
    add_definitions(${GTK3_CFLAGS_OTHER})
    add_executable (nice demo.cpp)
    target_link_libraries(nice ${GTK3_LIBRARIES})
endif()
