cmake_minimum_required (VERSION 3.8)
project(lesson2)
if (WIN32)
    add_definitions(-DWIN32_LEAN_AND_MEAN)
    add_executable (lesson2 WIN32 lesson2.cpp nice.hpp)
elseif(UNIX)
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
    include_directories(${GTK3_INCLUDE_DIRS})
    link_directories(${GTK3_LIBRARY_DIRS})
    add_definitions(${GTK3_CFLAGS_OTHER})
    add_executable (lesson2 lesson2.cpp nice.hpp)
    target_link_libraries(lesson2 ${GTK3_LIBRARIES})
    set(CMAKE_C_FLAGS_DEBUG "-g -DDEBUG")
    set(CMAKE_CXX_FLAGS_DEBUG "-g -DDEBUG")
    set(CMAKE_BUILD_TYPE Debug)
endif()
set_property(TARGET lesson2 PROPERTY CXX_STANDARD 20)